[package]
name = "grit"
version = "0.1.0"
authors = ["Riley Avron <ravron@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
anyhow = "1.0"
compress = "0.2"
hex = "0.4"

[dev-dependencies]
indoc = "1.0"
